fix(oidc): address third round of Copilot review comments on UserInfo augmentation
- Replace unchecked (Iterable<ClientRegistration>) cast with Iterable<?> + instanceof
  pattern to avoid ClassCastException on custom repositories that are iterable but
  not typed ClientRegistration
- Replace Map.copyOf with Collections.unmodifiableMap when caching the merged claims
  so that null-valued UserInfo claims (JSON {"claim": null}) no longer cause NPE
- Use cache.get(tokenValue, loader) instead of getIfPresent+put to make each
  cache-miss atomic per key: at most one UserInfo fetch runs in flight per token,
  preventing stampedes under concurrent requests with the same bearer token

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>